--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     servers for high volume, proxied LWP::UserAgent transactions
 
 VERSION
-    Version 0.01
+    Version 0.02
 
 SYNOPSIS
     This module is a fork from HTTP::ProxySelector (written by Eyal Udassin)
@@ -21,14 +21,17 @@ SYNOPSIS
       use LWP::UserAgent;
 
       # Instantiate
-      my $selector = HTTP::ProxySelector::Persistent->new();
+      my $selector = HTTP::ProxySelector::Persistent->new( db_file => "/tmp/proxy_cache.bdb" );
       my $ua = LWP::UserAgent->new();
 
       # Assign a _ proxy to the UserAgent object.
-      $selector->set_proxy($ua);
+      $selector->set_proxy($ua) or die $selector->error();
   
       # Just in case you need to know the chosen proxy
       print 'Selected proxy: ',$selector->get_proxy(),"\n";
+
+      # Perform a quick proxied get.  Lets you skip the useragent stuff.
+      my $html = $selector->proxied_get( url => "http://www.google.com" ) or die $selector->error();
 
 PREREQUISITES
     HTTP::ProxySelector::Persistent requires you to have these perl modules
@@ -61,14 +64,15 @@ PUBLIC METHODS
       $select = HTTP::ProxySelector::Persistent->new( sites => ['http://www.proxylist.com/list.htm'] );
 
    Default:
-      [ 'http://www.multiproxy.org/txt_anon/proxy.txt', 'http://www.samair.ru/proxy/fresh-proxy-list.htm' ]
+      [ 'http://hidemyass.com/free_proxy_lists.php?sort=DESC&country=1&limit=100' ]
 
    update_interval
     How often to update the cached list of proxy servers. Must be readable
     by Date::Manip.
 
    Example:
-      $select = HTTP::ProxySelector::Persistent->new( update_interval => "20 minutes" );
+      $select = HTTP::ProxySelector::Persistent->new( update_interval => "20 minutes" )
+                or die "Couldn't create proxyselector!";
 
    Default
       "15 minutes"
@@ -91,10 +95,10 @@ PUBLIC METHODS
 
     Arguments: A LWP::Useragent object
 
-    Returns: 0 normally, or an error message if it fails
+    Returns: 1 (success) or undef upon failure (sets an error).
 
    Example:
-      $select->set_proxy( $ua );
+      $select->set_proxy( $ua ) or die $select->error();
 
   get_proxy()
     Arguments: none.
@@ -107,11 +111,61 @@ PUBLIC METHODS
   test_proxy()
     Tests the proxy by trying to access a site (specified using the
     "testsite" option when constructing an HTTP::ProxySelector::Persistent
-    object).
+    object). It temporarily sets the timeout to be 1/2 of the timeout set in
+    the useragent that's passed to it. If the useragent that's passed
+    doesn't have a timeout set, it defaults to 5 seconds.
 
     Arguments: an LWP::UserAgent object.
 
-    Returns: 0 for success, 1 for failure.
+    Returns: 1 for success or undef for failure (sets an error).
+
+    Example:
+
+      ( $select->test_proxy( $ua ) ) ? print "Good test\n" : die $select->error();
+
+  proxied_get()
+    Selects a proxy and attempts to download the URL passed to this function
+    as an argument. If the download fails, it will remove the proxy from the
+    cache, select another one, and retry until the download succeeds. When
+    it does succeed, this function returns the content of the response. If
+    all you need to do is download one webpage one time, this should take
+    about half as long as manually setting a useragent and then using that
+    useragent to do a second grab after the automatic proxy test.
+
+    If all you're doing is a single HTTP get in your script and that's it,
+    this is a faster way to do it. Setting the useragent proxy involves at
+    least one mandatory test before the module even gives you a proxy to
+    make your real get with. This way uses your actual HTTP get instead of
+    testing first. It just persistently attempts to make your get and
+    doesn't quit until it either runs out of proxies or succeeds in the HTTP
+    get.
+
+    Each call to this method chooses a new proxy server from the cache.
+    Using two calls to proxied_get() in the same script will most likely use
+    two completely different proxy servers.
+
+   Arguments are options in a single hash with these keys:
+    url - a scalar URL to be downloaded. Mandatory.
+    timeout - a scalar integer number of how many seconds to allow before
+    declaring the attempt a failure and trying a new proxy. Optional,
+    defaults to 2.
+    ua - An LWP::UserAgent that you'd like to use for the transaction.
+    Optional. This sub constructs a default LWP useragent if you don't
+    provide one.
+
+   Returns:
+    The content of the page located at $url upon success, or undef upon
+    failure (sets an error).
+
+   Example
+      my $html = $selector->proxied_get( url => $url, timeout => 5 ) or die $selector->error();
+
+  error()
+    If any portion of the module encounters an error, calling this function
+    will return a string describing the last error. Read-only. No arguments.
+
+   Example
+      my $html = $selector->proxied_get( $url_that_doesnt_exist ) or die $selector->error();
 
 PRIVATE FUNCTIONS
   _fetch_proxies()
@@ -126,10 +180,12 @@ PRIVATE FUNCTIONS
 
    Arguments: none.
    Returns:
-    0 upon success, or an error message string upon failure.
+    1 upon success, or undef upon failure.
 
 TODO
-    * Code beautification. 1st draft is always rough.
+    * Need to find better proxylists for the test scripts. By and large, the
+    free proxylists I found had a bunch of bad proxy servers in them. This
+    makes my tests look bad because 'garbage in = garbage out.'
 
 AUTHOR
     Michael Trowbridge, "<michael.a.trowbridge at gmail.com>"
@@ -165,6 +221,8 @@ SUPPORT
 ACKNOWLEDGEMENTS
     This module is a fork from HTTP::ProxySelector v0.02.
     HTTP::ProxySelector v0.02 is copyright 2003 Eyal Udassin.
+
+    Error method was written by Allen Day and borrowed from Geo::Google.
 
 COPYRIGHT & LICENSE
     Copyright 2007 Michael Trowbridge, all rights reserved.
